# regardedPal

./: .gitignore  404.html  CNAME  IMG20260422160141.heic  IMG20260422215826.heic  IMG20260422215927.heic  IMG20260424112552.heic  IMG20260424112601.heic  PromptProgression.md  README.md  TODO.md  battery-fit-3000mah-single-on-pico-angle.heic  battery-fit-3000mah-single-on-pico-top.heic  dilder-drc.rpt  index.html  install-deps.sh  layout-2xAAA-flanking-pico-side.heic  layout-2xAAA-flanking-pico-top.heic  layout-aaa-pico-bootsel-topdown.heic  layout-aaa-pico-fpc-topdown-portrait.heic  layout-aaa-pico-waveshare-exploded.heic  layout-base-side-profile-full.heic  layout-base-side-profile-zoom-usbc.heic  setup.py  sitemap.xml
.github/workflows/: deploy-site.yml
DevTool/: devtool.py
Gamplay Planning/: 00-architecture-overview.md  01-core-game-loop.md  02-stat-system.md  03-emotion-engine.md  04-sensor-interfaces.md  05-input-menu-ui.md  06-life-stages-evolution.md  07-progression-unlocks.md  08-dialogue-system.md  09-persistence-storage.md  10-activity-tracker.md  11-mcu-migration-impact.md  12-user-guide.md  14-encounters-geocaching-collectibles.md
about/: index.html
about/contact/: index.html
assets/: garbage.pbm
blog/: index.html
blog/a-snap-on-thumbpiece-for-the-joystick--designing-a-tiny-part-by-talking-to-the-cad/: index.html
blog/asset-rendering-system/: index.html
blog/body-language-animations/: index.html
blog/breadboard-prototype-guide/: index.html
blog/build--render-tool--comprehensive-design-documentation/: index.html
blog/c-vs-python-renderer/: index.html
blog/custom-pcb-research/: index.html
blog/design-tracker-v2-gui-revamp/: index.html
blog/dilders-that-find-each-other-hide-treasures-and-grow-a-community/: index.html
blog/enclosure-first-prints/: index.html
blog/engagement-plan/: index.html
blog/esp32-board-support/: index.html
blog/esp32-s3-pcb-design/: index.html
blog/esp32-schematic-complete/: index.html
blog/esp32s3-enclosure-scad/: index.html
blog/freecad-parametric-model/: index.html
blog/freecad-pico-import-and-assembly/: index.html
blog/gameplay-architecture/: index.html
blog/hardware-arrives/: index.html
blog/how-to-stop-drowning-in-freecad-files-and-a-tool-to-help/: index.html
blog/joystick-anchor-pad-piezo-speaker-and-mpu-6500-accelerometer/: index.html
blog/joystick-first-input/: index.html
blog/joystick-hand-routed-pcb/: index.html
blog/joystick-pcb-arrival-v4-display-driver/: index.html
blog/joystick-pcb-jlcpcb-order/: index.html
blog/joystick-pcb-rev2-autoroute/: index.html
blog/kicking-off-the-dilder-full-board--one-pcb-to-carry-everything/: index.html
blog/mk2-translucent-prototype-running/: index.html
blog/motion-location-detection/: index.html
blog/pcb-fab-pricing-research/: index.html
blog/pcb-routing-complete/: index.html
blog/peer-discovery/: index.html
blog/phase-0-planning/: index.html
blog/phase-1-dev-tooling/: index.html
blog/phase-1-first-pixels/: index.html
blog/phase-1-hardware-begins/: index.html
blog/pico2w-board-support-current-design/: index.html
blog/rev2-aaa-cradle-and-base-plate/: index.html
blog/rev2-dual-10440-case-redesign/: index.html
blog/rev2-joystick-base/: index.html
blog/rev2-top-cover-inlay-first-print/: index.html
blog/rev2-top-cover-windowed/: index.html
blog/rev2-tp4056-integration/: index.html
blog/rev2-v3-print-session-assembly/: index.html
blog/runtime-rendering-revolution/: index.html
blog/sassy-octopus-born/: index.html
blog/sixteen-emotions/: index.html
blog/the-dilder-gets-a-speaker-a-motion-sensor-and-a-better-joystick/: index.html
blog/the-nosolar-variant-is-alive--soldered-battery-powered-and-charging-over-usb/: index.html
blog/the-sprint-that-fixed-everything-ota-updates-flicker-free-display-and-a-hub-firmware/: index.html
community/: index.html
community/discord/: index.html
community/support/: index.html
dev-setup/: Dockerfile  docker-compose.yml  version.h
dev-setup/angry-octopus/: CMakeLists.txt
dev-setup/chaotic-octopus/: CMakeLists.txt  main.c
dev-setup/chill-octopus/: CMakeLists.txt
dev-setup/conspiratorial-octopus/: CMakeLists.txt
dev-setup/creepy-octopus/: CMakeLists.txt
dev-setup/dilder-hub/: CMakeLists.txt  lib  lwipopts.h  main.c  main_octopus.c  quotes.h  wifi_config.h
dev-setup/excited-octopus/: CMakeLists.txt
dev-setup/fat-octopus/: CMakeLists.txt  main.c
dev-setup/hello-world/: CMakeLists.txt  main.c
dev-setup/hello-world/lib/Config/: rtc_compat.h
dev-setup/hello-world/lib/e-Paper/: EPD_2in13_V2.c  EPD_2in13_V2.h  EPD_2in13_V3a.c  EPD_2in13_V3a.h  EPD_2in13_V4.c  EPD_2in13_V4.h
dev-setup/homesick-octopus/: CMakeLists.txt
dev-setup/hungry-octopus/: CMakeLists.txt
dev-setup/joystick-mood-selector/: CMakeLists.txt  generate_quotes.py  main.c
dev-setup/lazy-octopus/: CMakeLists.txt  main.c
dev-setup/moodselector-sound/: CMakeLists.txt  main.c
dev-setup/moodselector-sound-wifi/: CMakeLists.txt  main.c
dev-setup/tired-octopus/: CMakeLists.txt  main.c
docs/: battery-redesign-shopping-list.md  breadboard-wiring-guide.md  custom-pcb-design-research.md  hardware-research.md  index.html  keyboard-to-pico-input.md  pcb-assembly-and-prototyping.md  programs-guide.md  setup-guide.md  solar-charging-research.md  user-engagement-plan.md
firmware/: CMakeLists.txt
firmware/include/platform/: board_config.h
hardware-design/: 10440-wiring-guide.md  3d-printing-pipeline.md  HARDWARE-DESIGN-PROCESS.md  Measurements.md  README.md  TopScreenEnclosure.scad  ansmann-1.5v-aaa-series-wiring-guide.md  breadboard-prototype-guide.md  build_and_render.sh  design-tracker.py  esp32s3-enclosure.scad  esp32s3-sandwich-mount.scad  jlcpcb-joystick-pcb-order-notes.md  pcb-design-plan.md  speaker-module-selection.md
javascripts/: octopus-banner.js
prompts/: index.html
search/: search_index.json
stylesheets/: extra.css
testing/: README.md  conftest.py  pytest.ini  requirements.txt  test.py
tools/: README.md
website/: DEPLOY.md  mkdocs.yml  requirements.txt
(+764 files in other folders)
